--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
 {% block title %}Log In{% endblock title %}
 
 {% block content %}
     <h2>Log In</h2>
-    <form  method="post">{% csrf_token %} {{ form.as_p }}
-    <button type="submit">Log In</button>
+    <form  method="post">{% csrf_token %} {{ form|crispy}}
+    <button type="submit" class="btn btn-success ml-2">Log In</button>
     </form>
 {% endblock content %}
