--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
 {% block title %}Sign Up{% endblock title %}
 
 {% block content %}
     <h2>Sign Up</h2>
-    <form  method="post"> {% csrf_token %} {{ form.as_p }}
-    <button type="submit">Sign Up</button>
+    <form  method="post"> {% csrf_token %} {{ form|crispy }}
+    <button type="submit" class="btn btn-success ml-2">Sign Up</button>
     </form>
 {% endblock content %}
