--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,4 +9,5 @@
     <form  method="post">{% csrf_token %} {{ form|crispy}}
     <button type="submit" class="btn btn-success ml-2">Log In</button>
     </form>
+    <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
 {% endblock content %}
