--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,3 @@
-{#<!DOCTYPE html>#}
-{#<html lang="en">#}
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <meta name="viewport" content="width=device-width, initial-scale=1">#}
-{#    <title> {% block title %}#}
-{#    	Personal Assistant#}
-{#    {% endblock %}</title>#}
-{#<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">#}
-{#</head>#}
-{#<body>#}
-{#<main>#}
-{#    {% block content %}#}
-{#    {% endblock content %}#}
-{#</main>#}
-{#<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>#}
-{#</body>#}
-{#</html>#}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -39,7 +20,7 @@
       <ul class="nav col-12 col-lg-auto ms-lg-auto mb-2 justify-content-center
           mb-md-0">
         {% if user.is_authenticated %}
-        <li><a href="#" class="nav-link px-2 link-dark">+ New Contact</a></li>
+        <li><a href="{% url 'contact_new' %}" class="nav-link px-2 link-dark">+ New Contact</a></li>
       </ul>
       <div class="dropdown text-end">
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
