--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,9 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-        <p>Hi, {{ user.username }}! You are {{ user.age}} years old.</p>
+        <p>Hi, {{ user.username }}!</p>
         <p><a href="{% url 'logout' %}">Log Out</a></p>
+        <p><a href="{% url 'contact_list' %}" class="btn btn-primary btn-lg" role="button">View all contacts</a></p>
         {% else %}
         <p>You are not logged in</p>
         <a href="{% url 'login' %}">Log In</a> |
