--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -19,9 +19,7 @@
   {% for contact in contact_list %}
 
     <tr>
-
-      <td><a href="{{ contact.get_absolute_url }}">{{ contact.last_name }}</a>
-          </td>
+      <td><a href="{{ contact.get_absolute_url }}">{{ contact.last_name }}</a></td>
       <td>{{ contact.first_name }}</td>
       <td>{{ contact.email }}</td>
     <td>{{ contact.dob }}</td>
