--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -21,7 +21,7 @@
     <tr>
         <td><a href="{{ contact.get_absolute_url }}">{{ contact.last_name }}</a></td>
         <td>{{ contact.first_name }}</td>
-        <td><p><a href="mailto:{{ contact.email }}">{{ contact.email }}</a></p></td>
+        <td><a href="mailto:{{ contact.email }}">{{ contact.email }}</a></td>
         <td>{{ contact.dob }}</td>
         <td><a href="{{ contact.get_absolute_url }}">New Phone Number</a></td>
         <td><a href="{% url 'contact_edit' contact.pk %}">Edit</a></td>
