birthday_list layout

--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -10,8 +10,9 @@
       <th scope="col">LAST NAME</th>
       <th scope="col">FIRST NAME</th>
       <th scope="col">E-MAIL</th>
-        <th scope="col">DOB</th>
-    <th scope="col"></th>
+        <th scope="col"><a href="{% url 'coming_birthday' %}">DOB</a></th>
+{#        <th scope="col">DOB</th>#}
+        <th scope="col"></th>
         <th scope="col"></th>
         <th scope="col"></th>
     </tr>
