--- a/templates/notes/tag_form.html
+++ b/templates/notes/tag_form.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Создание тегов</title>
-</head>
-<body>
-    <h1>Создание тегов</h1>
-    
-    <form method="post" action="{% url 'notes:tag_create' %}?next={{ request.GET.next|default:'' }}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Создать">
-    </form>
+{% extends 'base.html' %}
 
-    <!-- Кнопка для возврата к списку заметок -->
-    <a href="{% url 'notes:note_list' %}">Назад к списку заметок</a>
-</body>
-</html>
+{% block title %}Edit Tag{% endblock title %}
+
+{% block content %}
+  <h2>Edit Tag</h2>
+  <form method="post" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Save changes</button>
+  </form>
+  <a href="{% url 'notes:tag_list' %}">Cancel</a>
+{% endblock %}
