--- a/templates/notes/note_detail.html
+++ b/templates/notes/note_detail.html
@@ -8,14 +8,14 @@
   <p><strong>Description:</strong> {{ note.description }}</p>
   <p><strong>Status:</strong> {% if note.done %}Done{% else %}Pending{% endif %}</p>
 
-  <!-- Отобразите связанные теги для заметки -->
+  <!-- Отображение тега для заметки -->
   <p><strong>Tags:</strong>
     {% for tag in note.tags.all %}
       <span>{{ tag.name }}</span>
     {% endfor %}
   </p>
-
-  <!-- Добавьте другие поля и информацию о заметке, если необходимо -->
+  <!-- Вывод времени создания -->
+  <p><strong>Created:</strong> {{ note.created }}</p>
 
   <p><a href="{% url 'notes:note_edit' note.id %}">Edit Note</a></p>
   <p><a href="{% url 'notes:note_list' %}">Back to Note List</a></p>
