--- a/templates/notes/tag_list.html
+++ b/templates/notes/tag_list.html
@@ -3,10 +3,10 @@
 {% block title %}Tag List{% endblock title %}
 
 {% block content %}
-  <h2>Tag List</h2>
+  <h2>Список тегів</h2>
 
   <!-- Кнопка для создания нового тега -->
-  <a href="{% url 'notes:tag_create' %}" class="btn btn-primary mb-3">Create New Tag</a>
+  <a href="{% url 'notes:tag_create' %}" class="btn btn-primary mb-3">Створити новий тег</a>
 
   <ul>
     {% for tag in tags %}
@@ -16,12 +16,12 @@
         <!-- Кнопка для удаления тега -->
         <form method="post" action="{% url 'notes:tag_delete' pk=tag.pk %}" style="display:inline;">
           {% csrf_token %}
-          <button type="submit" class="btn btn-danger btn-sm ml-2">Delete</button>
+          <button type="submit" class="btn btn-danger btn-sm ml-2">Видалити</button>
         </form>
       </li>
     {% endfor %}
   </ul>
 
   <!-- Кнопка для возврата на список заметок -->
-  <a href="{% url 'notes:note_list' %}" class="btn btn-secondary">Back to Note List</a>
+  <a href="{% url 'notes:note_list' %}" class="btn btn-secondary">Назад</a>
 {% endblock %}
