--- a/templates/base.html
+++ b/templates/base.html
@@ -1,82 +1,74 @@
-{#<!DOCTYPE html>#}
-{#<html lang="en">#}
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <meta name="viewport" content="width=device-width, initial-scale=1">#}
-{#    <title> {% block title %}#}
-{#    	Personal Assistant#}
-{#    {% endblock %}</title>#}
-{#<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">#}
-{#</head>#}
-{#<body>#}
-{#<main>#}
-{#    {% block content %}#}
-{#    {% endblock content %}#}
-{#</main>#}
-{#<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>#}
-{#</body>#}
-{#</html>#}
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
-    <title> {% block title %}
-    	Personal Assistant
-    {% endblock %}</title>
-  <meta name="viewport" content="width=device-width,
-  initial-scale=1, shrink-to-fit=no">
+  <title>
+    {% block title %}
+    Personal Assistant {% endblock %}
+  </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+  <style>
+    .dropdown:hover .dropdown-menu {
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
   <header class="p-3 mb-3 border-bottom">
-    <div class="d-flex flex-wrap align-items-center justify-content-center
-        justify-content-lg-start">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <a class="navbar-brand" href="{% url 'home' %}">Personal Assistant</a>
-      <ul class="nav col-12 col-lg-auto ms-lg-auto mb-2 justify-content-center
-          mb-md-0">
+
+      <div class="ms-auto"> <!-- Добавлен класс ms-auto для блока с кнопками -->
+        <a href="{% url 'news:rates' %}" class="btn btn-primary">Курси валют</a>
+        <a href="{% url 'news:weather' %}" class="btn btn-primary">Погода</a>
+      </div>
+      
+      <!-- Добавляем кнопку "Новини" -->
+      <div class="dropdown ms-auto mt-3">
+        <button class="btn btn-primary" type="button" data-bs-toggle="dropdown" aria-expanded="false">Новини</button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <li><a class="dropdown-item" href="{% url 'news:show' category='politics'%}">Політика</a></li>
+          <li><a class="dropdown-item" href="{% url 'news:show' category='economics'%}">Економіка</a></li>
+          <li><a class="dropdown-item" href="{% url 'news:show' category='science'%}">Наука</a></li>
+          <li><a class="dropdown-item" href="{% url 'news:show' category='sport'%}">Спорт</a></li>
+          <li><a class="dropdown-item" href="{% url 'news:show' category='health'%}">Здоров’я</a></li>
+        </ul>
+      </div>
+
+      <ul class="nav col-12 col-lg-auto ms-lg-auto mb-2 justify-content-center mb-md-0">
         {% if user.is_authenticated %}
         <li><a href="#" class="nav-link px-2 link-dark">+ New Contact</a></li>
       </ul>
       <div class="dropdown text-end">
-        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
-          data-bs-toggle="dropdown" aria-expanded="false">
+        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
           {{ user.username }}
         </a>
         <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-          <li><a class="dropdown-item" href="{% url 'password_change' %}">
-              Change password</a></li>
+          <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a></li>
           <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
         </ul>
       </div>
       {% else %}
-{#      </ul>#}
-
       <div class="text-end">
-
-        <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">
-          Log In</a>
-
+        <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">Log In</a>
         <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
-
       </div>
-
       {% endif %}
     </div>
-{#    </div>#}
   </header>
   <main>
     <div class="container">
-      {% block content %}
-      {% endblock content %}
+      {% block content %} {% endblock content %}
     </div>
   </main>
 
   <!-- Bootstrap JavaScript Bundle -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
