--- a/templates/dob_list.html
+++ b/templates/dob_list.html
@@ -17,7 +17,7 @@
             <form action="{% url 'dob_list' %}" method="post">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-secondary ml2" type="submit">Надіслати</button>
+                <button class="btn btn-secondary ml2" type="submit">Підтвердити</button>
             </form>
         </th>
     </tr>
