--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="#">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/notes/notes.css' %}">
 </head>
 
 <body>
@@ -42,8 +43,7 @@
 
       <div class="text-end">
 
-        <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">
-          Log In</a>
+        <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">Увійти</a>
 
         <a href="{% url 'signup' %}" class="btn btn-primary">Зареєструватися</a>
 
