--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-    <title> {% block title %}
-    	Personal Assistant
-    {% endblock %}</title>
+  <title> {% block title %}
+    Personal Assistant
+  {% endblock %}</title>
   <meta name="viewport" content="width=device-width,
   initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></script>
 </head>
+
 
 <body>
   <header class="p-3 mb-3 border-bottom">
@@ -20,7 +23,9 @@
       <ul class="nav col-12 col-lg-auto ms-lg-auto mb-2 justify-content-center
           mb-md-0">
         {% if user.is_authenticated %}
-        <li><a href="{% url 'contact_new' %}" class="nav-link px-2 link-dark">+ New Contact</a></li>
+        <li><a href="{% url 'contact_new' %}" class="nav-link px-2 link-dark">+ Новий контакт</a></li>
+        <li><a href="{% url 'file_list' %}" class="nav-link px-2 link-dark">Всі файли</a></li>
+        <li><a href="{% url 'upload_file' %}" class="nav-link px-2 link-dark">Завантажити файл</a></li>
       </ul>
       <div class="dropdown text-end">
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
