--- a/templates/notes/note_list.html
+++ b/templates/notes/note_list.html
@@ -28,7 +28,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Готово</th>
+      <th>Статус</th>
       <th>Назва</th>
       <th>Теги</th>
       <th>Створено</th>
