--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -3,8 +3,8 @@
 {% block title %}Contacts{% endblock title %}
 
 {% block content %}
-
-    <table class="table table-striped">
+<a href="{% url 'search_list' %}" class="btn btn-primary">Пошук контактів</a>
+<table class="table table-striped">
   <thead>
     <tr>
       <th scope="col">ПРІЗВИЩЕ</th>
