--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,16 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-        <p>Привіт, {{ user.username }}!</p>
-        <p><a href="{% url 'logout' %}">Вийти</a></p>
-        <h3>Ваш Персональний Помічник очікує Ваших доручень. <br> Виберіть додаток:</h3>
+        <p class="user-name">Привіт, {{ user.username }}!</p>
+        <p class="hero-menu "><a class="text-white" href="{% url 'logout' %}">Вийти</a></p>
+        <p>Привіт, я можу допомогти тобі! Розумний помічник Personal Assistant є Вашим особистим помічником, готовим
+            завжди прийти до Вас на допомогу. Ви можете за моєю допомогою:
+            створювати список контактів, редагувати його, виконувати пошук, подивитися у кого найближчим часом буде день
+            народження, зробити записи важливих подій, створювати теги для них, зберігати файли в хмарному середовищі,
+            переглядати їх і ще багато іншого. Для цього потрібно просто зареєструватися та зайти під своїм профілем.
+            Також з моєю допомогою можна переглянути погоду, курси валют і почитати свіжі новини на різну тематику.
+        </p>
+        <h3 class="hero-title">Ваш Персональний Помічник очікує Ваших доручень. <br> Виберіть додаток:</h3>
         <p><a href="{% url 'contact_list' %}" class="btn btn-primary btn-lg w-25" role="button">Переглянути
             всі контакти</a>
         </p>
