--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,6 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    /*margin: 0;*/
     padding: 0;
 }
 
@@ -18,9 +17,41 @@ header {
 
 
 main {
+    background-image: url("../img/istockphoto-1288144283-612x612.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0.5);
     flex: 1;
     margin-top: 70px;
     padding: 20px;
+}
+
+.user-name {
+    font-size: 1.5em;
+    color: black;
+    text-shadow: -1px -1px 0 white,
+    1px -1px 0 white,
+    -1px 1px 0 white,
+    1px 1px 0 white;
+}
+
+.hero-menu {
+    font-size: 1.2em;
+    /*color: white;*/
+    text-shadow: -1px -1px 0 black,
+    1px -1px 0 black,
+    -1px 1px 0 black,
+    1px 1px 0 black;
+}
+
+.hero-title {
+    font-size: 2em;
+    color: black;
+    text-shadow: -1px -1px 0 white,
+    1px -1px 0 white,
+    -1px 1px 0 white,
+    1px 1px 0 white;
 }
 
 footer {
