--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -3,35 +3,39 @@
 {% block title %}Contacts{% endblock title %}
 
 {% block content %}
-<a href="{% url 'search_list' %}" class="btn btn-primary">Пошук контактів</a>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">ПРІЗВИЩЕ</th>
-      <th scope="col">ІМ'Я</th>
-      <th scope="col">ЕЛЕКТРОННА ПОШТА</th>
-        <th scope="col"><a href="{% url 'dob_list' %}">ДАТА НАРОДЖЕННЯ</a></th>
-        <th scope="col"></th>
-        <th scope="col"></th>
-        <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for contact in contact_list %}
-      {% if contact.owner.pk == request.user.pk %}
-    <tr>
-        <td><a href="{{ contact.get_absolute_url }}">{{ contact.last_name }}</a></td>
-        <td>{{ contact.first_name }}</td>
-        <td><a href="mailto:{{ contact.email }}">{{ contact.email }}</a></td>
-        <td>{{ contact.dob|date:"d-m-Y" }}</td>
-        <td><a href="{{ contact.get_absolute_url }}">Новий номер телефону</a></td>
-        <td><a href="{% url 'contact_edit' contact.pk %}">Редагувати</a></td>
-        <td><a href="{% url 'contact_delete' contact.pk %}">Видалити</a></td>
-    </tr>
-      {% endif %}
-  {% endfor %}
-  </tbody>
-</table>
+    <a href="{% url 'search_list' %}" class="btn btn-primary mb-1">Пошук контактів</a>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">ПРІЗВИЩЕ</th>
+            <th scope="col">ІМ'Я</th>
+            <th scope="col">ЕЛЕКТРОННА ПОШТА</th>
+            <th scope="col">ТЕЛЕФОН</th>
+            <th scope="col"><a href="{% url 'dob_list' %}">ДАТА НАРОДЖЕННЯ</a></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for contact in contact_list %}
+            {% if contact.owner.pk == request.user.pk %}
+                <tr>
+                    <td><a href="{{ contact.get_absolute_url }}">{{ contact.last_name }}</a></td>
+                    <td>{{ contact.first_name }}</td>
+                    <td><a href="mailto:{{ contact.email }}">{{ contact.email }}</a></td>
+                    <td>{% for phone_number in contact.phonenumber_set.all %}
+                        <p><a href="tel:{{ phone_number }}">{{ phone_number }}</a></p>
+                    {% endfor %}</td>
+                    <td>{{ contact.dob|date:"d-m-Y" }}</td>
+                    <td><a href="{{ contact.get_absolute_url }}">Новий номер телефону</a></td>
+                    <td><a href="{% url 'contact_edit' contact.pk %}">Редагувати</a></td>
+                    <td><a href="{% url 'contact_delete' contact.pk %}">Видалити</a></td>
+                </tr>
+            {% endif %}
+        {% endfor %}
+        </tbody>
+    </table>
 
 {% endblock content %}
 
