--- a/templates/notes/note_confirm_delete.html
+++ b/templates/notes/note_confirm_delete.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Підтвердження видалення нотатки</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Підтвердження видалення нотатки{% endblock title %}
+
+{% block content %}
     <h1>Ви впевнені, що хочете видалити цю нотатку?</h1>
-    
+
     <form method="post">
         {% csrf_token %}
-        <input type="submit" value="Так, видалити">
+        <input type="submit" value="Так, видалити" class="btn btn-danger">
     </form>
 
-    <!-- Кнопка для отмены удаления и возврата к списку заметок -->
-    <a href="{% url 'notes:note_list' %}">Відмінити</a>
-</body>
-</html>
+    <a href="{% url 'notes:note_list' %}" class="btn btn-secondary mt-3">Відмінити</a>
+{% endblock content %}
